--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Dinos 'R' Us</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -18,10 +19,10 @@
     </nav>
   </header>
   <main>
-    <h2>Hadrosaur</h2>
+    <h2 id="hadrosaur">Hadrosaur</h2>
     <figure>
       <img src="images/hadrosaur.jpg" alt="image of a hadrosaur">
-      <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+      <figcaption class="intro">Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
     </figure>
 
     <h2>Iguanodon</h2>
